--- a/BootstrapSite4/Web.config
+++ b/BootstrapSite4/Web.config
@@ -17,6 +17,9 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="BitbucketUri" value="http://ci.corteos.ru:7990" />
+    <add key="BitbucketLogin" value="guest" />
+    <add key="BitbucketPassword" value="1qaz!QAZ" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
